<resources>
    <string name="app_name">Android Widget</string>
    <string name="action_add_new">Add New</string>
    <string name="title_activity_new_record">NewRecordActivity</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_view_record">ViewRecordActivity</string>

    <string name="title">Title: </string>
    <string name="author">Author: </string>
    <string name="date">Date: </string>
    <string name="go_back">Go Back</string>
    <string name="save">Save</string>

    <string name="hint_title">Title</string>
    <string name="hint_author">Author</string>
    <string name="hint_date">Date</string>

    <string name="empty">No data</string>

</resources>
