<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.davila.widget.android.androidwidget.NewRecordActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/title"
        android:id="@+id/textView1"
        android:layout_margin="5dp"/>

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/et_title"
        android:layout_alignRight="@+id/textView1"
        android:layout_alignParentRight="true"
        android:layout_toEndOf="@+id/btn_back"
        android:hint="@string/hint_title"
        android:layout_margin="5dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/author"
        android:id="@+id/textView2"
        android:layout_below="@+id/et_title"
        android:layout_margin="5dp"/>

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/et_author"
        android:layout_below="@+id/et_title"
        android:layout_alignRight="@+id/textView2"
        android:layout_alignParentRight="true"
        android:layout_toEndOf="@+id/btn_back"
        android:hint="@string/hint_author"
        android:layout_margin="5dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/date"
        android:id="@+id/textView3"
        android:layout_below="@+id/et_author"
        android:layout_margin="5dp"/>

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/et_date"
        android:layout_below="@+id/et_author"
        android:layout_alignRight="@+id/textView3"
        android:layout_alignParentRight="true"
        android:layout_toEndOf="@+id/btn_back"
        android:hint="@string/hint_date"
        android:inputType="date"
        android:layout_margin="5dp"/>

    <Button
        android:id="@+id/btn_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/go_back"
        android:layout_below="@+id/et_date"
        android:layout_margin="5dp"/>

    <Button
        android:id="@+id/btn_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save"
        android:layout_marginRight="5dp"
        android:layout_marginLeft="5dp"
        android:layout_alignTop="@+id/btn_back"
        android:layout_alignStart="@+id/et_date" />

</RelativeLayout>
